# messagepack

./: .gitignore  messagepack.cabal  stack.yaml
Data/: MessagePack.hs
Data/MessagePack/: FixInt.hs
tests/: Main.hs  MessagePackClassSpec.hs  SerializationSpec.hs
