name               : messagepack
version            : 1.0.0.0
synopsis           : Serialize instance for Message Pack Object
description        : Serialize instance for Message Pack Object
homepage           : https://github.com/rodrigosetti/messagepack
license            : MIT
license-file       : LICENSE
author             : Rodrigo Setti
stability          : experimental
bug-reports        : https://github.com/rodrigosetti/messagepack/issues
package-url        : https://github.com/rodrigosetti/messagepack/archive/master.zip
maintainer         : rodrigosetti@gmail.com
copyright          : (c) 2014 Rodrigo Setti
category           : Data
build-type         : Simple
cabal-version      : >=1.10
extra-source-files : CHANGELOG
                   , README.md

source-repository head
  type     : git
  location : git@github.com:rodrigosetti/messagepack.git

library
  exposed-modules  : Data.MessagePack
                   , Data.MessagePack.Spec
  default-language : Haskell2010
  build-depends    : base       >= 4.6 && <5
                   , bytestring == 0.10.*
                   , cereal     == 0.5.*
                   , containers >= 0.5 && <0.7
                   , deepseq    >= 1.1 && <1.5
                   , text
                   , vector
                   , QuickCheck                 == 2.*
                   , hspec                      >= 2
 other-extensions  : DeriveGeneric

test-suite messagepack-tests
  type             : exitcode-stdio-1.0
  hs-source-dirs   : tests
  main-is          : Spec.hs
  default-language : Haskell2010
  other-modules    : SerializationSpec
                   , MessagePackClassSpec
  build-depends    : base                       == 4.*
                   , QuickCheck                 == 2.*
                   , hspec                      >= 2
                   , bytestring                 == 0.10.*
                   , cereal                     == 0.5.*
                   , containers                 >= 0.5 && <0.7
                   , text
                   , vector
                   , messagepack

